...
                                                  10.0, 0.0, 10.0, 0.0),
                                          child: Container(
                                            width: MediaQuery.sizeOf(context)
                                                    .width *
                                                1.0,
                                            child: TextFormField(
                                              key: ValueKey('email_cugu'),
                                              controller:
                                                  _model.emailController,
                                              focusNode: _model.emailFocusNode,
                                              autofocus: true,
                                              obscureText: false,
                                              decoration: InputDecoration(
...
                                          10.0, 0.0, 10.0, 0.0),
                                      child: Container(
                                        width:
                                            MediaQuery.sizeOf(context).width *
                                                1.0,
                                        child: TextFormField(
                                          key: ValueKey('Senha_65qc'),
                                          controller: _model.senhaController,
                                          focusNode: _model.senhaFocusNode,
                                          obscureText: !_model.senhaVisibility,
                                          decoration: InputDecoration(
                                            hintStyle:
                                                FlutterFlowTheme.of(context)
...
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                30.0, 0.0, 30.0, 20.0),
                            child: FFButtonWidget(
                              key: ValueKey('Button_4ucv'),
                              onPressed: () async {
                                _model.login = await LoginCall.call(
                                  email: _model.emailController.text,
                                  senha: _model.senhaController.text,
                                );
                                if (LoginCall.statusLogin(
...
